    little overhead
  - To help with XML Screen loading overhead, especially in dev mode with
    timeouts turned on, now only reloads if the file's last modified time
    has changed
  - Added date-period form field widget to show drop-downs for
    this/next/last day/week/month/year as an alternative to an explicit
    date range
- Entity Facade:
  - Added in operator (_op) for searchFormInputs/search-form-inputs
  - Added entity.field.@default attribute with a Groovy expression to set a
    default for a field based on other fields, constants, etc

Bug Fixes:

- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters
- Fixed issues with complex-alias where aliased entities were not add
  to list of aliased entities used and alias level function was not added
- Fixed tx cache issue where a value could be updated after putting it into
  the cache causing an attempt to read the original to get an updated value
- Changed ResourceReference.init() to use ExecutionContextFactory instead
  of ExecutionContext for cases where the object is long-lived

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================

Moqui Framework 1.4.1 is a minor new feature and bug fix release. Many of
the new features and bug fixes are related to multi-tenant support
including better isolation of tenants and tenant provisioning services.
Other fixes and improvements are related to Service ECA rules, jobs, DB
setup, and the tx cache.

This release also has various embedded documentation (annotations, etc)